Add Horizon Dashboard link to UserMenu

--- a/resources/css/components/_nav.scss
+++ b/resources/css/components/_nav.scss
@@ -12,6 +12,8 @@
     border-radius: design.app-value('nav-link-border-radius');
     text-decoration: none;
     display: flex;
+    align-items: center;
+    gap: .3em;
     cursor: pointer;
     background-color: transparent;
     transition-property: color, background-color, opacity;
