Add input setting for forcing clock type
- Closes #28
- Also contains design changes to add a new form message type for static control descriptions

--- a/resources/css/components/_forms.scss
+++ b/resources/css/components/_forms.scss
@@ -400,12 +400,16 @@
   display: block;
   font-size: 0.9em;
 
-  &.error {
-    color: #faa;
+  &.form-message-error {
+    color: design.app-color('form-message-error');
   }
 
-  &.success {
-    color: #afa;
+  &.form-message-success {
+    color: design.app-color('form-message-success');
+  }
+
+  &.form-message-description {
+    color: design.app-color('form-message-description');
   }
 }
 
