Add public pageview analytics page

--- a/resources/css/components/_index.scss
+++ b/resources/css/components/_index.scss
@@ -1,5 +1,6 @@
 @forward 'add-app-links';
 @forward 'alert';
+@forward 'analytics-card';
 @forward 'avatar';
 @forward 'badge';
 @forward 'bot-info';
