--- a/resources/css/design/_common.scss
+++ b/resources/css/design/_common.scss
@@ -28,6 +28,7 @@ $value-map: (
   header-brand-font-size: 1.25rem,
   content-spacing: 1rem,
   content-container-max-width: 1080px,
+  content-heading-1: 1.8em,
   content-heading-2: 1.6em,
   content-heading-3: 1.4em,
   content-heading-4: 1.25em,
