Fix anchor positioning of input popups
Closes #168

--- a/resources/css/components/_popup.scss
+++ b/resources/css/components/_popup.scss
@@ -38,6 +38,7 @@
       transform: none;
 
       &.has-anchor {
+        position-anchor: var(--position-anchor-name);
         top: anchor(bottom) !important;
         left: anchor(left) !important;
       }
